src/test/resources/fixtures/api/deprecated-ini-options.php
<?php

    ini_set(<error descr="'safe_mode' is a deprecated option since PHP 5.3.0 (removed in PHP 5.4.0).">'safe_mode'</error>, '');
    ini_get(<error descr="'safe_mode' is a deprecated option since PHP 5.3.0 (removed in PHP 5.4.0).">'safe_mode'</error>);
    ini_alter(<error descr="'safe_mode' is a deprecated option since PHP 5.3.0 (removed in PHP 5.4.0).">'safe_mode'</error>, '');
    ini_restore(<error descr="'safe_mode' is a deprecated option since PHP 5.3.0 (removed in PHP 5.4.0).">'safe_mode'</error>);